--- a/_config.yml
+++ b/_config.yml
@@ -4,13 +4,13 @@ permalink: '/:title/'
 color_scheme: light
 accent_color: pink
 header:
-  title: Exto
+  title: STRAPON U
   has_nav: true
 footer:
-  content: '&copy; Stackbit-Exto. All rights reserved.'
+  content: '&copy; STRAPONU.com All rights reserved.'
   links:
-    - text: Made with Stackbit
-      url: 'https://www.stackbit.com'
+    - text: Strapon Shop on line
+      url: 'https://straponu.com'
       new_window: true
   has_social: true
 sass:
